2009-12-22  Thomas Heller  <theller@python.net>

	* Bug fixes for event handlers implemented in Python.

2009-12-11  Thomas Heller  <theller@python.net>

	* COM servers implemented in Python can now fire events; it did
	not work in some cases.

	* When an exception occurs in a COM event handler, a traceback is
	printed.

2009-11-26  Thomas Heller  <theller@python.net>

	* Allow typelib wrappers that contain 'SAFEARRAY(VARIANT*)'
	parameter types to be imported.  Calling these methods will fail,
	though.

2009-11-13  Thomas Heller  <theller@python.net>

	* To avoid a memory leak when PyInitialize()/PyUninitialize() are
	called several times, return S_FALSE from inproc server's
	DllCanUnloadNow().

2009-11-05  Thomas Heller  <theller@python.net>

	* COMObject subclasses can now implement a _final_release_()
	method to free up resources, for example.  This method is called
	when the COM reference count reaches zero.

	* Implement __hash__ method in dynamic dispatch classes.  This
	fixes a 'python -3' warning.

	* comtypes\safearray.py: When numpy is not installed, creating
	safearrays took a very long time.  This is fixed now.

	* comtypes\test\test_server.py: New way to test COM client and
	server.  Work in progress.

2009-10-22  Thomas Heller  <theller@python.net>

	* Support broken COM objects that provide IProvideClassInfo2, but
	not IProvideClassInfo (although the latter is derived from the
	former).  See
	http://sourceforge.net/tracker/index.php?func=detail&aid=2829887&group_id=115265&atid=692942

	* Fixed a regression from the 0.4 version, [out] parameters didn't
	accept pointers or arrays any longer. Thanks again to Michael
	Eddington.

2009-10-19  Thomas Heller  <theller@python.net>

	* Fix a memory leak in Python COM servers.  Thanks to Michael
	Eddington for the patch.

2009-10-02  Thomas Heller  <theller@python.net>

	* comtypes\test\test_server.py: Start a better approach to test
	both COM object calls and COM object implementations.
